--- a/index.css
+++ b/index.css
@@ -10,15 +10,16 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 4em 0;
+    z-index: -1;
 }
 
 .top-page {
     background-color: rgba(51, 51, 51, 0.8);
     display: inline-block;
-    padding: 2em;
     border: 4px solid white;
     border-radius: 12px;
+    padding: 2vw;
+    margin: 2vw;
 }
 
 h1 {
@@ -27,7 +28,9 @@ h1 {
     text-shadow: 0px 0px 5px black;
     margin: 0;
     padding-top: 2em;
+    
 }
+
 
 h2 {
     color: white;
@@ -43,15 +46,21 @@ h2 {
     padding-top: 2em;
     padding-right: 5em;
     padding-left: 5em;
-    padding-bottom: 7em;
+    padding-bottom: 5em;
 }
-
 
 .gallery-container {
     background-color: rgb(255, 219, 173);
     background-image: url(/images/uwp4679532.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+}
+
+#search-btn, #search-input {
+    font-size: 1.5rem;
+    border: 0.3vw solid rgb(0, 86, 140);
+    border-radius: 5px;
 }
 
 .gallery-wrapper {
@@ -60,8 +69,7 @@ h2 {
     gap: 20px;
     font-size: 1.5rem;
     font-weight: bolder;
-    padding: 20px;
-    justify-items: center;
+    padding: 5vw;
 }
 
 .gallery-title-container{
@@ -83,7 +91,7 @@ h2 {
 
 .artwork {
     background: white;
-    padding: 10px;
+    padding: 1vw;
     border-radius: 8px;
     text-align: center;
 }
@@ -95,7 +103,55 @@ h2 {
 }
 
 .artwork h3 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     margin-top: 0.5rem;
     color: #333;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    color: white;
+    background-color: #333;
+    margin-top: 3em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
+.pagination button {
+    padding: 0.5em 1em;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+@media screen and (max-height:700px) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    .info-bio {
+        font-size: 1rem;
+    }
+
+    .gallery-title {
+        font-size: 2rem;
+    }
+
+    .artwork h3 {
+        font-size: 0.5rem;
+    }
+
+    #search-btn,
+    #search-input {
+        font-size: 1rem;
+    }
+    .pagination button {
+        font-size: 0.5rem;
+    }
 }
